# refman

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  poop.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
refman/: refman.css  refmanApp.py
refman/ref/: abstract_fetcher.py  bib_entry.py  ref_db.py
refman/test/: __test_db.py  test_bib_entry.py  test_db.py
refman/ui/: refman.css  refmanApp.py
resources/: test_bib.db
src/refman/: abstract_fetcher.py  adams.bib  bib_entry.py  ref_db.py  ref_tag.py  refmanApp.py  refman_cfg.py
src/refman/ref/: abstract_fetcher.py  bib_entry.py  ref_db.py  ref_tag.py
src/refman/test/: test_bib_entry.py  test_db.py
src/refmanApp/: refmanApp.py
